"ChangeLog"

2005-02-23	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-04-object-01-13-alias-09-instance-01:
	  New branch for the purpose of making the instance_collection
	  class framework consistent.  
	  This revision introduces classification tag which control the 
	  infrastructure of template class patterns with a set of
	  traits-class specializations.  
	  So far, we applied this to member_instance_references as a 
	  test case, and everything is hunky-dory.  

	* -instance-02:
	  Converted instance_reference to use class_traits<Tag>.
	  Next: alias_connections, then ... instance collections, 
	  the final frontier!

	* -instance-03:
	  alias_connections converted to class_traits, muahahaha...
	  Code needs some serious clean-up before proceeding.  

	* -instance-04:
	  Cleaned-up, no more conditionals on SUBTYPE_ALIAS_CONNECTION
	  and USE_CLASSIFICATION_TAGS.  


2005-02-21	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-04-object-01-13-alias-09:
	  Fixed multikey_assoc::is_compact(), adding necessary, 
	  implicit conversion to key type in {int,bool}_instance_alias.  
	  Really sick and tired of maintaining copies of code for each
	  physical instance collection type... it's time to employ
	  templates with policy functors... (sub-branch).

	* ARTXX-00-01-04-main-00-04-object-01-13-alias-08:
	  Initial testing of instance unrolling, without connections, 
	  just for int_instance_collection, our guinea pig.  
	  Placeholder code pasted into other instance collections, 
	  but marked as empty for now.  

		+ Updated packed_array[_generic] template signature to 
		  include type for index, so it's not hard-coded to size_t.  

		+ Fixed bug in multikey_assoc::is_compact()'s return value
		  for the case where D == 1.
		  There may be another bug for D != 1, related to 
		  index_extremities, look for "WRONG" in "multikey_assoc.tcc".

	* ARTXX-00-01-04-main-00-04-object-01-13-alias-07: